#71 fix clipping of dropdown in .room-users

--- a/frontend/css/components/_room.scss
+++ b/frontend/css/components/_room.scss
@@ -4,3 +4,8 @@
 		margin-bottom: 0;
 	}
 }
+
+.room-users .dropdown {
+	// Fix issues with dropdowns getting clipped by the panel
+	position: absolute;
+}
